# obs-studio

./: CMakeLists.txt
UI/: obs-app.cpp  window-basic-main.cpp  window-basic-settings.cpp
cmake/Modules/: ObsHelpers.cmake
libobs/: CMakeLists.txt
libobs-metal/: CMakeLists.txt  metal-device.hpp  metal-device.mm  metal-indexbuffer.mm  metal-samplerstate.mm  metal-shader.mm  metal-shaderbuilder.cpp  metal-shaderprocessor.hpp  metal-shaderprocessor.mm  metal-stagesurface.mm  metal-subsystem.hpp  metal-subsystem.mm  metal-swapchain.mm  metal-texture.mm  metal-vertexbuffer.mm  metal-zstencilbuffer.mm
libobs/graphics/: graphics.h
libobs/util/: platform-cocoa.m
